--- a/SDL2-CS.Core.csproj
+++ b/SDL2-CS.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net6</TargetFrameworks>
-		<Platforms>x86;x64</Platforms>
+		<Platforms>AnyCPU</Platforms>
 	</PropertyGroup>
 	<PropertyGroup>
 		<EnableDefaultItems>false</EnableDefaultItems>
@@ -48,5 +48,10 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageLicenseExpression>Zlib</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<Version>1.1.0</Version>
+		<PackageReleaseNotes>Added DllMap, packaged windows runtime builds of SDL2 libraries (except SDL2_gfx)</PackageReleaseNotes>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/Xapier14/SDL2-CS.git</RepositoryUrl>
+		<PackageReadmeFile></PackageReadmeFile>
 	</PropertyGroup>
 </Project>
