--- a/SDL2-CS.Core.csproj
+++ b/SDL2-CS.Core.csproj
@@ -28,14 +28,13 @@
 	</ItemGroup>	
 	<ItemGroup>
 	  <Content Include="DllMap.xml">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		<CopyToPublishDirectory>Always</CopyToPublishDirectory>
 	  </Content>
-	</ItemGroup>	
-	<ItemGroup>
-		<ContentWithTargetPath Include="lib\**">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<TargetPath>%(RecursiveDir)\%(Filename)%(Extension)</TargetPath>
-		</ContentWithTargetPath>
+	  <Content Include="libs\**">
+		<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+	  </Content>
 	</ItemGroup>
 	<PropertyGroup>
 	<!-- Exclude the project from analysis -->
@@ -48,10 +47,11 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageLicenseExpression>Zlib</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-		<Version>1.1.0</Version>
-		<PackageReleaseNotes>Added DllMap, packaged windows runtime builds of SDL2 libraries (except SDL2_gfx)</PackageReleaseNotes>
+		<Version>1.1.2</Version>
+		<PackageReleaseNotes></PackageReleaseNotes>
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/Xapier14/SDL2-CS.git</RepositoryUrl>
 		<PackageReadmeFile></PackageReadmeFile>
+		<PackageOutputPath>../.nuget/</PackageOutputPath>
 	</PropertyGroup>
 </Project>
